--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,65 @@
+Changes for 0.052       Wed Feb  9 18:44:13 CET 2005
+====================================================
+
+*   Make auto-installation work (with some guess work) if
+    $ENV{PERL_MM_USE_DEFAULT} is set.
+*   Setup decent defaults for the callbacks, so scripts 
+    don't have to set them unless they want actual callback
+    behaviour (This helps ExtUtils::AutoInstall greatly).
+*   chmod() extracted files to 755 so we do not get permission
+    denied errors when trying to remove them or copy over them
+    if they were not +w for the user.
+*   Don't use sudo, even if it's configured, if the user is
+    root already.
+*   Default to 'prefer binary programs' if Compress::Zlib is
+    not installed.
+*   Make 'parse_module' deal better with paths that have sub
+    directories in them.
+*   Make 'parse_module' deal better with version numbers 
+    that have letters in them.
+*   Don't shell out to get the perl version if the perl we
+    looking for is $^X;
+*   Improve finding a proper homedir for cpanplus on VMS    
+*   Accept the perl version as an optional argument to 
+    'module_is_supplied_with_perl_core'
+*   Require Test::Reporter 1.27 for test reporting; it fixes
+    many bugs.
+*   Only load Module::Build when we really needed it, not on
+    any installation.
+*   Fix a bug that made 's reconfigure' not use the defaults
+    from your current config.
+*   RedHat 9.0's stock perl has a few serious bugs in it 
+    (they applied custom patches) and will break CPANPLUS
+    badly. Add a note to the makefile.pl that redhat users
+    should upgrade their perl.
+*   CPANPLUS::inc was encountering 'use' calls that had windows
+    paths rather than unix paths (???). Patch to compensate
+    for this.
+*   Module::Load::Conditional cache is being flushed in standard
+    flush runs now, allowing use of LWP (and similar) when it
+    becomes available, even if it previously wasn't.
+*   Don't copy 'Config.pm-orig' to 'Config.pm' during Makefile.PL
+    stage -- if the user has a custom config and forgets to set
+    the environment var, CPANPLUS' tests will use the wrong config.
+*   Some tarballs have '.' as directory, rather than project sub
+    directory. Guess first for extraction dir and verify, only 
+    then try the actual extract path.
+*   Improve documentation in the Default shell
+*   Improve test reporting texts as supplied by Barbie
+*   Add a callback to munge test reports before they are sent
+*   Add versions of loaded dependencies to the test reports.
+*   Make limited tests on skipped configuration work properly.    
+*   Don't use sudo to install into our own sandbox for 
+    Module::Build tests
+*   Skip module::build tests if we're under PERL_CORE and
+    M::B is not available (not yet integrated)
+*   Skip install tests if run under PERL_CORE
+*   Adjust include paths and paths to perl when tests are
+    run under PERL_CORE
+*   Update bundled IPC::Run to version 0.80    
+*   Update bundled Module::Build to version 0.26081
+*   Improve tests    
+
 Changes for 0.051       Fri Jan 14 15:10:02 CET 2005
 ====================================================
 
