--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Changes for 0.053       Fri Feb 11 10:07:08 CET 2005
+====================================================
+
+*   0.052 did not ship with its META.yml, causing a few
+    of the bundles modules to be indexed. This release is
+    only relevant to the PAUSE indexer, and changes nothing
+    on the client side whatsoever.
+
+
 Changes for 0.052       Wed Feb  9 18:44:13 CET 2005
 ====================================================
 
