Import of KANE/CPANPLUS-0.055 from CPAN.
gitpan-cpan-distribution: CPANPLUS
gitpan-cpan-version:      0.055
gitpan-cpan-path:         KANE/CPANPLUS-0.055.tar.gz
gitpan-cpan-author:       KANE
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Changes for 0.055       Sat Jun  4 15:53:37 CEST 2005
+=====================================================
+
+*   This release just affects users of the Test::Reporter
+    and 'cpantest' utilities.
+*   The 'munge_test_report' callback was getting the 
+    grade passed as of 0.054, but the default callback
+    was now returning the wrong item. [#13086]
+
 Changes for 0.054       Fri Jun  3 17:44:40 CEST 2005
 =====================================================
 
