--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Changes for 0.056       Sat Aug 20 13:31:17 CEST 2005
+=====================================================
+
+*   This release is identical to 0.056_01 but no longer
+    marked as 'development release'.
+
 Changes for 0.056_01    Thu Aug 18 16:26:52 CEST 2005
 =====================================================
 
