--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Changes for 0.0561      Sat Aug 20 19:57:15 CEST 2005
+=====================================================
+
+*   This release holds no functional changes over 0.056
+*   The META.yml did not get included in this distribution,
+    meaning the PAUSE indexer indexed our include modules as
+    well. 
+    
+
 Changes for 0.056       Sat Aug 20 13:31:17 CEST 2005
 =====================================================
 
