--- a/README
+++ b/README
@@ -48,6 +48,11 @@ out of it's extraction dir, by typing:
 This may help you with bootstrap issues, or other situations 
 where you need to use CPANPLUS but can not use a system installation.
 
+You can install all of CPANPLUS' dependencies like this, before 
+installing CPANPLUS itself by running:
+
+    perl bin/cpanp-boxed -i --force Bundle::CPANPLUS::Dependencies
+
 All the modules bundled are found in the 'inc/bundle' directory. If
 you, for whatever reason, wish to not install these from cpan, you
 could include them into your environment as such (using tcsh):
